Complete HashFixesTest, HashTest, FixTest